    - Add the HWLOC_ALLOW=all environment variable to totally ignore
      administrative restrictions such as Linux Cgroups.
    - Add disallowed_pu and disallowed_numa bits to the discovery support
      structure.
  + Group objects have a new "dont_merge" attribute to prevent them from
    being automatically merged with identical parent or children.
* Backends
  + Add support for Linux 5.3 new sysfs cpu topology files with Die information.
  + Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
  + Improve memory locality on Linux by using HMAT initiators (exposed
    since Linux 5.2+), and NUMA distances for CPU-less NUMA nodes.
  + The x86 now properly handles offline CPUs.
  + Detect the locality of NVIDIA GPU OpenCL devices.
  + Ignore NUMA nodes that correspond to NVIDIA GPU by default.
    - They may be kept if HWLOC_KEEP_NVIDIA_GPU_NUMA_NODES=1 in the environment.
      Fix their CPU locality and add info attributes to identify them.
    Thanks to Max Katz and Edgar Leon for the help.
  + Add support for IBM S/390 drawers.
  + Rework the heuristics for discovering KNL Cluster and Memory modes
    to stop assuming all CPUs are online (required for mOS support).
    Thanks to Sharath K Bhat for testing patches.
  + Ignore NUMA node information from AMD topoext in the x86 backend,
    unless HWLOC_X86_TOPOEXT_NUMANODES=1 is set in the environment.
  + Expose Linux DAX devices as hwloc Block OS devices.
  + Remove support for /proc/cpuinfo-only topology discovery in Linux
    kernel prior to 2.6.16.
* Tools
  + lstopo
    - lstopo factorizes objects by default in the graphical output when
      there are more than 4 identical children.
      New options --no-factorize and --factorize may be used to configure this.
      Also hit the 'f' key to disable factorizing in interactive outputs.
    - Both logical and OS/physical indexes are now displayed by default
      for PU and NUMA nodes.